Added simple template and styling

--- a/view/index.ejs
+++ b/view/index.ejs
@@ -9,6 +9,24 @@
 </head>
 <body>
   <nav>hello world</nav>
+
+  <% { let random = Math.floor(Math.random() * data.length) %>
+      <section id="hightlight">
+        <h2>New popular</h2>
+        <h2><a href="/detail/<%=data[random].id%>" ><%=data[random].original_name%></a></h2>
+        <img src="https://image.tmdb.org/t/p/original/<%=data[random].backdrop_path%>" alt="">
+      </section>
+  <% } %>
+  <main>
+    <% for(let i = 0; i < data.length; i++){ %>
+      <a tabindex="<%= i + 1 %>" href="/detail/<%=data[i].id %>">
+        <img alt="<%= data[i].original_name%>"  src="https://image.tmdb.org/t/p/w342<%=data[i].poster_path %>">
+        <h2><%= data[i].original_name %></h2>
+        <h3>Vote average <%= data[i].vote_average %></h3>
+      </a>
+    <% } %>
+  </main>
+
   <script type="text/javascript" src="js/app.js" charset="utf-8"></script>
 </body>
 </html>
