--- a/static/style/style.css
+++ b/static/style/style.css
@@ -79,7 +79,7 @@ nav .search  img {
   text-align: right;
   position: absolute;
   color: white;
-  font-size: 1.5em;
+  font-size: 2.1vw;
 }
 
 #hightlight .textOverlay h2 {
