--- a/static/style/style.css
+++ b/static/style/style.css
@@ -14,20 +14,20 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
-
 nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: 100%;
   height: 5em;
-  margin: 0 0 0em 0;
+  margin: 0;
   padding: 0.3em 2em;
   background-color: white;
   border-radius: 0 0 7px 7px;
 }
 
-nav img, nav .search {
+nav img,
+nav .search {
   height: 70%;
   cursor: pointer;
   display: flex;
@@ -39,21 +39,24 @@ nav .search input {
   padding: 0.4em;
   border: none;
   background-color: #54BAD8;
-  width: 20em;
-  display: none;
+  width: 0;
+  opacity: 0;
+  transition: opacity 0s ease 200ms, width 200ms ease 0s;
 }
 
 nav .search input.active {
-  display: block;
+  opacity: 1;
+  width: 20em;
+  transition: opacity 0s ease 0s, width 200ms ease 0s;
 }
 
-nav .search input, nav .search input::placeholder {
+nav .search input,
+nav .search input::placeholder {
   color: white;
   font-size: 1em;
 }
 
-
-nav .search  img {
+nav .search img {
   height: 100%;
 }
 
@@ -66,7 +69,7 @@ nav .search  img {
 }
 
 #hightlight::after {
-  background: linear-gradient(to right, rgba(0,0,0,0), rgba(0,0,0,0.9));
+  background: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.9));
   content: "";
   width: 100%;
   height: 100%;
@@ -94,7 +97,6 @@ nav .search  img {
 #hightlight .textOverlay a {
   color: inherit;
   font-size: 2em;
-  /* text-decoration: none; */
 }
 
 #hightlight img {
@@ -107,11 +109,11 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 0 0em 1em 0em;
+  margin: 0 0 1em 0;
   border-radius: 10px;
   padding: 1em;
   background-color: rgba(255, 255, 255, 0.95);
-  width: calc(100% - 0em) ;
+  width: calc(100% - 0);
 }
 
 main > span {
@@ -126,7 +128,8 @@ main > span a {
   opacity: 0.6;
 }
 
-main > span a:hover, main > span a:focus {
+main > span a:hover,
+main > span a:focus {
   opacity: 1;
 }
 
@@ -155,9 +158,9 @@ main .serieGrid a {
   transition: 0.3s all;
 }
 
-
-main .serieGrid a:hover, main .serieGrid a:focus {
-  background-color: rgba(0, 0, 0, .1);
+main .serieGrid a:hover,
+main .serieGrid a:focus {
+  background-color: rgba(0, 0, 0, 0.1);
   outline: none;
 }
 
