--- a/view/index.ejs
+++ b/view/index.ejs
@@ -14,7 +14,7 @@
   <nav>
     <img src="style/logo.svg" alt="">
     <div class="search">
-      <input type="text" name="" value="" placeholder="Search....">
+      <input type="text" name="" value="" placeholder="What serie are you looking for?">
       <img src="style/search.svg" alt="">
     </div>
   </nav>
