--- a/view/index.ejs
+++ b/view/index.ejs
@@ -15,6 +15,7 @@
     <img src="style/logo.svg" alt="">
     <div class="search">
       <input type="text" name="" value="" placeholder="What serie are you looking for?">
+      <span class="autoComplete"></span>
       <img src="style/search.svg" alt="">
     </div>
   </nav>
