small text change

--- a/view/index.ejs
+++ b/view/index.ejs
@@ -23,7 +23,7 @@
   <% { let random = Math.floor(Math.random() * data.length) %>
       <section id="hightlight">
         <section class="textOverlay">
-          <h2>New Popular</h2>
+          <h2>New In Popular</h2>
           <h2><a href="/detail/<%=data[random].id%>" ><%=data[random].original_name%></a></h2>
         </section>
         <img src="https://image.tmdb.org/t/p/original/<%=data[random].backdrop_path%>" alt="">
